calico/tests/kind/felix-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: felix-metrics-svc
  namespace: kube-system
spec:
  type: NodePort
  selector:
    k8s-app: calico-node
  ports:
    - port: 9091
      targetPort: 9091
