calico/tests/kind/network-policy.yaml
apiVersion: v1
kind: NetworkPolicy
metadata:
  name: allow-tcp-6379
  namespace: production
